--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ sqlalchemy = "^2.0.30"
 psycopg2 = "^2.9.9"
 fastapi = "^0.111.0"
 arq = "^0.26.0"
+python-dateutil = "^2.9.0.post0"
 
 
 [tool.poetry.group.dev.dependencies]
