--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -15,6 +15,7 @@ arq = "^0.26.0"
 python-dateutil = "^2.9.0.post0"
 pydantic-settings = "^2.3.3"
 python-dotenv = "^1.0.1"
+pytz = "^2024.1"
 
 
 [tool.poetry.group.dev.dependencies]
